# google-photo-organiser

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  PROMPT_build.md  PROMPT_plan.md  README.md  build.spec  loop.sh  pyproject.toml
.github/workflows/: build-windows.yml
docs/: build.md  data-dictionary.md  methods.md
scripts/: 01-acquire.py  02-clean.py  03-analyze.py  04-visualize.py
specs/: setup-photo-organiser.md  windows-build.md
src/photo_organiser/: __init__.py  __main__.py  config.py  extractor.py  main.py  metadata.py  organizer.py
tests/: test_extractor.py  test_metadata.py  test_organizer.py
tests/fixtures/: README.md  malformed_metadata.json  missing_photo_time.json  valid_metadata.json
