[project]
name = "google-photo-organiser"
version = "0.1.0"
description = "Organize Google Photos exports by year and media type"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0.0",
    "pyinstaller>=6.0.0",
    "tqdm>=4.66.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["src/photo_organiser"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
